# ENGENHARIA-DE-DADOS

./: .gitignore  README.MD  dashboard.py  main.py  pyproject.toml  teste.py
data/raw/: atendimentos.csv
src/: database.py  limpeza.py  modelagem.py
src/database/: connection.py
